--- a/portfolio.html
+++ b/portfolio.html
@@ -81,7 +81,7 @@
       </a>
     </li>
     <li>
-      <a href="#0">
+      <a href="https://github.com/sebastar99/MA.Desing">
        <span style="font-size: 19px;">MA.Desing</span>
        <span>
           <i class="fa fa-github" aria-hidden="true"></i>    
@@ -89,7 +89,7 @@
       </a>
     </li>
     <li>
-      <a href="#0">
+      <a href="https://github.com/sebastar99/Digilloc">
        <span style="font-size: 19px;">DigiLloc</span>
        <span>
         <i class="fa fa-github" aria-hidden="true"></i>      
@@ -97,7 +97,7 @@
       </a>
     </li>
     <li>
-      <a href="#0">
+      <a href="https://github.com/sebastar99/Desafios-Front-End-Mentor">
        <span style="font-size: 19px;">Front-end Mentor</span>
        <span>
         <i class="fa fa-github" aria-hidden="true"></i>    
